# device-drivers

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SOURCE_IMPORT.md  SUPPORT_STATUS.md  THIRD_PARTY_NOTICES.md  devices.yaml  ftw-channel.json  index.yaml  pyproject.toml  source-import-delta.json  support-status-overrides.json  support-status.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
drivers/: INTEGRATION_OVERVIEW.md  type_mapping.yaml
manifests/: abb_meter.yaml  abb_terra.yaml  acrel.yaml  alfen.yaml  alphaess.yaml  ambibox.yaml  atmoce.yaml  carlo_gavazzi.yaml  chint.yaml  circutor.yaml  deye.yaml  easee.yaml  esphome-dsmr.yaml  etrel.yaml  ferroamp.yaml  ferroamp_dc2_v2x.yaml  ferroamp_modbus.yaml  foxess.yaml  fronius.yaml  fronius_api.yaml  fronius_smart_meter.yaml  goe.yaml  goe_http.yaml  goodwe.yaml  growatt.yaml  hardybarth.yaml  hello.yaml  huawei.yaml  janitza.yaml  keba.yaml  kostal.yaml  kstar.yaml  mennekes.yaml  opendtu.yaml  opendtu_mqtt.yaml  openevse.yaml  p1_dsmr.yaml  p1_encrypted.yaml  p1_hdlc.yaml  p1_meter.yaml  (+22 more)
spec/: blixt-lua-reference-architecture.md  control-runtime-v2.md  device-catalog.md  driver-contract.md  driver-inventory-v1.md  driver-package-v1-migration.md  driver-package-v1.md  host-api.md  manifest-v2.md  signing.md  support-status.md  tiers.md
tests/: test_driver_package.py  test_driver_runtime_contracts.py  test_ftw_download_stats.py  test_ftw_legacy_parity.py  test_ftw_release_workflow.py  test_ftw_repository.py  test_goodwe_package.py
tools/: build_candidate.py  (+15 more)
(+137 files in other folders)
