[project]
name = "sourceful-device-drivers"
version = "0.1.0"
description = "Public Sourceful device driver source, contracts, and tests"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
package = [
    "cryptography>=44.0.0,<48.0.0",
    "jsonschema>=4.23.0,<5.0.0",
]
dev = [
    "pytest>=9.0.3,<10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["drivers/tests", "tests"]
pythonpath = ["."]
